.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Results_Processing_Job__c.object
<CustomObject>
    <description>This object is used to track the activity of uploading and processing 3rd party test results.</description>
    <fields>
        <fullName>provar__Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>provar__Missing_Test_Case_Strategy__c</fullName>
        <inlineHelpText>Select what happens when test results refer to test cases that do not exist in Provar Manager</inlineHelpText>
        <label>Missing Test Case Strategy</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ignore</fullName>
                    <default>true</default>
                    <label>Ignore</label>
                </value>
                <value>
                    <fullName>Create</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Test_Cycle__c</fullName>
        <label>Test Cycle</label>
        <referenceTo>provar__Test_Cycle__c</referenceTo>
        <relationshipLabel>Test Results Processing Jobs</relationshipLabel>
        <relationshipName>Test_Results_Processing_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Results_Format__c</fullName>
        <label>Test Results Format</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JUnit</fullName>
                    <default>true</default>
                    <label>JUnit</label>
                </value>
                <value>
                    <fullName>TestNG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Test_Type__c</fullName>
        <inlineHelpText>Required when the strategy is to create missing test cases.</inlineHelpText>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Testing_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Tester__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tester</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Test Results Processing Jobs</relationshipLabel>
        <relationshipName>Test_Results_Processing_Jobs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Test Results Processing Job</label>
    <listViews>
        <fullName>provar__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRPJ-{000000}</displayFormat>
        <label>Test Results Processing Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results Processing Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>provar__Test_Type_required_to_create_Test_Cases</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( provar__Missing_Test_Case_Strategy__c , &apos;Create&apos;) &amp;&amp;  ISBLANK(TEXT(provar__Test_Type__c))</errorConditionFormula>
        <errorMessage>Test Type is required when Missing Test Case Strategy is set to &apos;Create&apos;.</errorMessage>
    </validationRules>
</CustomObject>